# SP4E

./: .gitmodules  README.md  gmres.py  initial_trial.py  main.py  optimizer.py  optimizer_current.py  optimizer_current_a_trial.py  optimizer_current_final_working.py  optimizer_current_working_copy.py  readme.md  readme_thomas.md  utils.py  visualize.py
homework1/: utils.py  visualize.py
homework2/: .gitignore  CMakeLists.txt  README.md  readme.md
homework2/src/: CMakeLists.txt  dumper_series.hh  main.cc  natural.csv  output.csv  pi.psv  plot.py  series.cc  series.hh
homework3/heat-fft-solver/: README.md
homework3/heat-fft-solver/starting_point/: CMakeCache.txt  CMakeLists.txt  Doxyfile.doxygen  Makefile  cmake_install.cmake  compute_temperature.cc  fft.hh  frequencies_reference.txt  generate_reference_frequencies.py  main.cc  material_points_factory.cc  matrix.hh  particles  system.cc  system.hh  system_evolution.cc  system_evolution.hh  test_fft  test_fft.cc  test_kepler  test_temperature.cc
homework3/heat-fft-solver/starting_point/html/: annotated.html  class_compute-members.html  class_compute.html  class_compute__inherit__graph.map  class_compute__inherit__graph.md5  class_compute_boundary-members.html  class_compute_boundary.html  class_compute_boundary__coll__graph.map  class_compute_boundary__coll__graph.md5  class_compute_boundary__inherit__graph.map  class_compute_boundary__inherit__graph.md5  class_compute_contact-members.html  class_compute_contact.html  class_compute_contact__coll__graph.md5  class_compute_contact__inherit__graph.map  class_compute_energy-members.html  class_compute_energy.html  class_compute_energy__coll__graph.map  class_compute_energy__coll__graph.md5  class_compute_energy__inherit__graph.map  class_compute_energy__inherit__graph.md5  class_compute_gravity-members.html  class_compute_gravity.html  class_compute_gravity__coll__graph.map  class_compute_gravity__coll__graph.md5  class_compute_interaction-members.html  class_compute_interaction.html  class_compute_interaction__coll__graph.map  class_compute_interaction__coll__graph.md5  class_compute_interaction__inherit__graph.map  class_compute_interaction__inherit__graph.md5  class_compute_kinetic_energy-members.html  class_compute_kinetic_energy.html  class_compute_kinetic_energy__inherit__graph.map  class_compute_kinetic_energy__inherit__graph.md5  class_compute_potential_energy-members.html  class_compute_potential_energy.html  class_compute_potential_energy__coll__graph.map  class_compute_potential_energy__coll__graph.md5  class_compute_potential_energy__inherit__graph.map  (+387 more)
homework3/heat-fft-solver/starting_point/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+39 more)
homework4/: README.md
homework4/starting_point/: .gitignore  compute_bindings.cpp  compute_bindings.hh  compute_interaction.hh  compute_temperature.cc  compute_temperature.hh  compute_temperature_finite_differences.cc  compute_temperature_finite_differences.hh  csv_bindings.cpp  csv_bindings.hh  factory_bindings.cpp  factory_bindings.hh  main.cc  main.py  optimize_velocity.py  setup_bindings.py  setup_compute.py  setup_csv.py  setup_factory.py  simulation_utils.py  test_finite_diff.cc
